# wa_cubing_stats

./: Cargo.toml  README.md  index.html  metadata.json  sor_avg.html  sor_single.html
.github/workflows/: rust.yml  static.yml
docs/: 222.html  333.html  333bf.html  333fm.html  333ft.html  333mbld.html  333oh.html  444.html  444bf.html  555.html  555bf.html  666.html  777.html  clock.html  kinch.html  minx.html  pyram.html  skewb.html  sor.html  sq1.html
html_output/: 222.html  333.html  333bf.html  333mbld.html  333oh.html  444bf.html  555.html  555bf.html  666.html  777.html  home.html  minx.html  sor.html  sq1.html
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: tests.rs
src/: main.rs
