[package]
name = "wa_cubing_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.21.1", features = ["full"]}
reqwest = { version = "0.11", features = ["json"]}
zip = "0.6"
serde_json = "1"
tempfile = "3"