[package]
name = "wa_cubing_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"]}
reqwest = { version = "0.11", features = ["json"]}
zip = "0.6"
serde_json = "1"
tempfile = "3"
csv = "1.2.2"
macros = { path = "macros" }
serde = { version = "1.0", features = ["derive"]}
rustc-hash = "1.1.0"